web/assets/css/main.scss
/* ... */
.border-bg-red {
  border-bottom: 3px solid #C0342B;
  color: white;

}

.bg-white {
  background-color: white;
  color: black;
}

.bg-orange {
  background-color: #fd9c00;
  color: white;
}

.bg-green {
  background-color: #59C960;
  color: white;
}

.bg-black {
  background-color: rgba(0, 0, 0, 0.879);
  // a {
  //   color: white;
  //   background-color: rgba(0, 0, 0, 0.879);
  //   text-decoration: none;
  //   bottom: 0px;
  //   right: 0px;
  //   position: absolute;
  //   overflow: hidden;
  //   text-overflow: ellipsis;
  //   text-wrap: normal;
  //   padding: 6px;
  //   width: 70px;
  // }
}

.bg-darkgrey {
  background-color: rgba(0, 0, 0, 0.879);

  a {
    color: white;
    background-color: rgba(0, 0, 0, 0.879);
    text-decoration: none;
    bottom: 0px;
    right: 0px;
    position: absolute;
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: normal;
    padding: 6px;
    width: 70px;
  }
}

.card.bg-ocre {
  background-color: #FFCA29;
  color: black;
}

$transition_speed_in: 0.15s;  // Faster transition for hover in
$transition_speed_out: 0.3s;  // Slower transition for hover out
$shadow_amount: 0.3;

.shadow-hover {
  transition: box-shadow $transition_speed_out ease-in-out; // Slower when moving away from the element
  box-shadow: 0 0 0 rgba(0, 0, 0, 0); // Set an initial transparent shadow
}

// Custom CSS for hover effect
.shadow-hover:hover {
  transition: box-shadow $transition_speed_in ease-in-out; // Faster when hovering over
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, $shadow_amount);
}

// Custom CSS for hover effect with transition
.card-hover {
  transition: transform $transition_speed_out ease-in-out, box-shadow $transition_speed_out ease-in-out; // Slower transition when moving away
  box-shadow: 0 0 0 rgba(0, 0, 0, 0); // Initial state with an invisible shadow
}

.card-hover:hover {
  transition: transform $transition_speed_in ease-in-out, box-shadow $transition_speed_in ease-in-out; // Faster transition when hovering
  transform: scale(1.05); // Slightly increase the size
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, $shadow_amount); // Visible shadow
}

.text-black {
  color: black;
}

.sitemap {
  h5 {
    font-size: 12pt;
    font-weight: 500;
    color: white;
  }

  a {
    color: rgba(248, 248, 255, 0.878);
    font-size: 11pt;
    font-weight: 400;
    text-decoration-line: none;
    // text-decoration-line: underline;
    // text-decoration-style: dotted;
    text-decoration-color: whitesmoke;
    margin-bottom: 30px;

  }

  ul li a {
    margin-bottom: 4px;
    padding-bottom: 0px;
    // text-decoration-line: underline;
    // text-decoration-style: dotted;
    text-decoration-line: none;
    text-decoration-color: whitesmoke;

  }
}

.black {
  color: black !important;
}

.media {
  @media screen and (min-width: 300px) {
    width: 100px;
  }

  @media screen and (min-width: 768px) {
    width: 200px;
  }
}

.grey {
  color: gray;
  text-decoration: none;
}

.bg-nav {
  background-color: #00ccff;
  border-radius: 4pt;
}

.bg-nav a {
  color: white;
}

.bg-nav ul li a.active {

  // background-color: #C0342B;
  color: rgb(255, 255, 6);
  // border-bottom-left-radius: 4pt;
  // border-bottom-right-radius: 4pt;
}

.bg-nav a:hover {
  color: #FFCA29;
}

.bg-yellow {
  background-color: #FFCA29;
}

.thanks a.nav-link {
  color: #295EFF;
  text-emphasis-style: bold;
  font-weight: 700;
}

.menu-title {
  text-decoration-line: underline;
  text-decoration-style: dotted !important;
  text-decoration-line: 1px;
}

.dotted {
  text-decoration-style: dotted !important;
  text-decoration-line: 1px;

  // color:black;
  color: $orange ;

}

.dotted-white {
  color: white;
  text-decoration-style: dotted !important;
  text-decoration-line: 1px;
}

.blog-part {
  .title {
    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.9);
    font-size: 20pt;
  }
}

h1 {
  // font-family: 'Vox', sans-serif;
  font-family: $kev_font;
  letter-spacing: -3px;
  text-transform: uppercase;
}

h2 {
  letter-spacing: -1px;
  text-transform: uppercase;
  font-family: $kev_font;
}

h1 {
  font-size: 40pt !important;
  font-stretch: condensed !important;
  font-weight: 800;
  // color: $kevred;
}

article {

  h1,
  h2,
  h3,
  h4,
  h5 {
    font-family: $kev_font, sans-serif;
    text-transform: uppercase;
  }

  h2 {
    font-size: 26pt;
  }

  #markdown-toc {
    list-style: none;
    margin-left: 0px;
    padding-left: 0px;

    li a {
      color: $orange;
      text-decoration-style: dotted;
    }
  }

  .toc {
    ul {
      list-style: none;
      margin-left: 0px;
      padding-left: 0px;

      li a {
        color: $orange;
        text-decoration-style: dotted;
      }
    }

    em {
      font-weight: 600;
    }
  }

  li a {
    color: $orange;
    text-decoration-style: dotted;
  }

  .icon {
    width: 48px;
    height: 48px;
  }

}

.note {
  background-color: #FFCA29;

  p {
    color: black;
    text-decoration-color: black;
    font-size: 12pt;

  }

}

a.nav-link.white-text:hover {
  color: #FFCA29;
}

.small-nav {
  font-size: 10pt !important;
}

.nav-link.small-nav {

  color: $orange;

}

.nav-link.small-nav.active {
  font-weight: 600;
  background-color: whitesmoke !important;
  color: #0088ff;
}

a.nav-link.white-text {
  color: white;
}

nav-vox {
  font-family: vox, sans-serif;
  font-weight: 700;
  font-style: normal;
}

.sub-nav {
  background-color: $kevred;

}

.sub-nav a {
  font-size: 12pt;
  color: gray;
}

hr {
  color: lightgrey !important;
  height: 1px !important;
}

.orange {
  color: $orange !important;
  text-decoration: none;
}

a.dotted {
  text-decoration-style: dotted !important;
  text-decoration-color: $orange !important;
  text-decoration-line: 1px !important;
  min-width: 0;
  
}

h5 {
  font-family: $kev_font, sans-serif;
  font-size: 17pt !important;
  text-transform: uppercase;
}

.bg-white {
  background-color: white;
}

@media (max-width: 1250px) {

  /* … */
  #small_nav {
    visibility: hidden;
  }
}
/* ... */

